flutter-app/android/app/src/main/jniLibs/x86_64/libpiper.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/catsi/piper/ffi */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "bridge.go"
 #include <stdlib.h>
 typedef void (*EventCallback)(const char* eventJSON);
 static void callEventCallback(EventCallback cb, const char* json) { cb(json); }

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern int PiperCreateNode(char* name, char* nodeID);
extern void PiperSetNodeName(int handle, char* name);
extern char* PiperStartNode(int handle);
extern void PiperStopNode(int handle);
extern char* PiperNodeID(int handle);
extern char* PiperNodeName(int handle);
extern void PiperSend(int handle, char* text, char* toPeerID);
extern void PiperSendGroup(int handle, char* text, char* groupID);
extern char* PiperSendFile(int handle, char* peerID, char* filePath);
extern char* PiperSendFileToGroup(int handle, char* groupID, char* filePath);
extern char* PiperSendCallSignal(int handle, char* toPeerID, char* signalType, char* payload);
extern char* PiperCreateGroup(int handle, char* name);
extern void PiperInviteToGroup(int handle, char* groupID, char* peerID);
extern void PiperLeaveGroup(int handle, char* groupID);
extern char* PiperLocalIPs(int handle);
extern char* PiperGetPeerIP(int handle, char* peerID);
extern int PiperGetTURNPort(int handle);
extern char* PiperListPeers(int handle);
extern char* PiperListGroups(int handle);
extern void PiperSetEventCallback(int handle, EventCallback cb);
extern void PiperSetDownloadsDir(int handle, char* dir);
extern void PiperFreeString(char* s);

#ifdef __cplusplus
}
#endif